css for hero image and menu overlap fix. Css for sidebar ads with images

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -985,7 +985,7 @@ h2.carousel-overlay:before {
         margin-bottom: -65px;    
     }
     @include media-breakpoint-down(phone) {
-        margin-bottom: -55px; 
+        margin-bottom: -45px; 
     }
 
     a {
