--- a/web/themes/custom/myusf/sass/src/partials/_typography.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_typography.scss
@@ -300,7 +300,7 @@ tr {
 /* Sidebar Second Ads
 =================================================== */
 .sidebar-ad {
-	padding:15px!important;
+	
 	h2 {
 		color: $white!important;
 		font-size:1.2rem;
@@ -318,6 +318,12 @@ tr {
 			color: $yellow!important;
 			background: transparent;
 		}
+	}
+	.sidebar-ad-text {
+		padding: 15px 15px 5px!important;
+	}
+	.sidebar-ad-image {
+		margin-bottom: -15px!important;
 	}
 }
 
